<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="keyService" translatable="false">keyService</string>
    <string name="keyLanguage" translatable="false">keyLanguage</string>
    <string name="keyMaxResults" translatable="false">keyMaxResults</string>
    <string name="keyUseExternalEvaluator" translatable="false">keyUseExternalEvaluator</string>
    <string name="keyAudioCues" translatable="false">keyAudioCues</string>
    <string name="keyUseTts" translatable="false">keyUseTts</string>
    <string name="urlArvutajaProject">http://kaljurand.github.com/Arvutaja/index.html</string>
    <string name="urlGrammarsProject" translatable="false">http://kaljurand.github.com/Grammars/</string>
    <string name="urlK6neleProject" translatable="false">http://code.google.com/p/recognizer-intent/</string>
    <string name="urlK6neleDownload" translatable="false">https://play.google.com/store/apps/details?id=ee.ioc.phon.android.speak</string>
    <string name="defaultGrammar" translatable="false">http://kaljurand.github.com/Grammars/grammars/pgf/Action.pgf</string>
    <string name="ambiguous" translatable="false">...</string>
    <string name="arrowRight" translatable="false">→</string>
    <string name="nameLangLinearize" translatable="false">App</string>
    <string name="nameRecognizer" translatable="false">Kõnele</string>
    <string name="nameK6nelePkg" translatable="false">ee.ioc.phon.android.speak</string>
    <string name="nameK6neleCls" translatable="false">ee.ioc.phon.android.speak.RecognizerIntentActivity</string>
    <string name="nameK6neleService" translatable="false">ee.ioc.phon.android.speak.SpeechRecognitionService</string>
    <string name="labelApp">Arvutaja</string>
    <string name="prefCurrentSortOrder" translatable="false">prefCurrentSortOrder</string>
    <string name="prefCurrentSortOrderMenu" translatable="false">prefCurrentSortOrderMenu</string>
    <string name="prefRecognizerServiceCls" translatable="false">prefRecognizerServiceCls</string>
    <string name="prefFirstTime" translatable="false">prefFirstTime</string>
    <string name="labelExamples">Examples</string>
    <string name="labelSettings">Settings</string>
    <string name="labelShow">Info</string>
    <string name="warningUtteranceNotSupported">Input sentence not supported</string>
    <string name="error">Error</string>
    <string name="errorResultAudioError">Audio recording failed. Maybe another app is currently recording.</string>
    <string name="errorResultNetworkError">Something is wrong with the network</string>
    <string name="errorResultClientError">General client error</string>
    <string name="errorResultServerError">Recognizer server error</string>
    <string name="errorResultNoMatch">No match was found for the recorded speech. Please try again!</string>
    <string name="errorRecognizerNotPresent">Arvutaja works best with the speech recognition service %1$s. Please install it from the Play Store.</string>
    <string name="errorCommandNotSupported">Command not supported</string>
    <string name="errorIntentActivityNotPresent">There is no app to perform this task. Install it from Play Store first.</string>
    <string name="errorNoDefaultRecognizer">Speech recognizer not installed or no default recognizer set</string>
    <string name="errorTtsLangNotAvailable">Spoken output not available for language \"%1$s\"</string>
    <string name="errorTtsInitError">Spoken output initialization failed</string>
    <string name="ttsAmbiguous">Input is ambiguous between %1$d readings.</string>
    <string name="ttsTtsLangAvailable">Spoken output is available for %1$s.</string>
    <string name="menuMainSort">Sort …</string>
    <string name="menuMainSortByTimestamp">by time</string>
    <string name="menuMainSortByTranslation">by expression</string>
    <string name="menuMainSortByEvaluation">by value</string>
    <string name="menuMainExamples">Examples</string>
    <string name="menuMainSettings">Settings</string>
    <string name="titleCategoryLinks">Links</string>
    <string name="titleMaxResults">Recognition hypotheses</string>
    <string name="titleUseExternalEvaluator">Autoview</string>
    <string name="summaryUseExternalEvaluator">Automatically view the result in an external app (e.g. Google Maps, WolframAlpha)</string>
    <string name="titleService">Speech recognizer</string>
    <string name="dialogTitleService">Select speech recognizer</string>
    <string name="titleLanguage">Input language</string>
    <string name="dialogTitleLanguage">Select language</string>
    <string name="titleAudioCues">Play audio cues</string>
    <string name="summaryAudioCues">Beep before and after recording</string>
    <string name="titleUseTts">Speech output</string>
    <string name="summaryUseTts">Read back the command with the system default text-to-speech engine</string>
    <string name="titleArvutajaProject">project Arvutaja</string>
    <string name="summaryArvutajaProject">(maker of this app)</string>
    <string name="titleGrammarsProject">project Grammars</string>
    <string name="summaryGrammarsProject">Speech recognition grammars in Grammatical Framework</string>
    <string name="titleK6neleProject">project Kõnele</string>
    <string name="summaryK6neleProject">Grammar-aware Estonian-supporting speech recognition service for Android</string>
    <string name="buttonMicrophoneContentDescription">Press this button to speak an expression</string>
    <string name="buttonDeleteContentDescription">Delete this expression</string>
    <string name="buttonYes">Yes</string>
    <string name="buttonNo">No</string>
    <string name="buttonOk">OK</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonGoToStore">Go to Play Store</string>
    <string name="buttonNever">Never</string>
    <string name="buttonLater">Later</string>
    <string name="alarmExtraMessage">set by Arvutaja</string>
    <string name="fileExamples">file:///android_asset/examples/en_US.html</string>
    <string name="msgFoundK6nele">Using Kõnele as the speech recognizer. You can override it in the Arvutaja-settings, but keep in mind that Arvutaja works best only with Kõnele.</string>
    <string name="confirmDeleteEntry">Are you sure you want to delete entry \"%1$s\"?</string>
    <string name="confirmDeleteMultiEntry">Are you sure you want to delete this multielement entry?</string>
    <string name="msgActionWebSearch">Click to search the web</string>
    <string name="msgActionSearch">Click to search</string>
    <string name="msgActionSearchLongPress">Click to search device</string>
    <string name="msgActionSetAlarm">Click to set the alarm</string>
    <string name="msgActionViewWolframAlpha">Click to view on WolframAlpha</string>
    <string name="msgActionViewGoogleMaps">Click to view on Google Maps</string>
    <string name="msgActionDial">Click to dial</string>
    <string name="msgActionView">Click to view</string>

    <string-array name="empty" translatable="false"></string-array>
    <string-array name="entryValuesMaxResults" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>8</item>
        <item>16</item>
    </string-array>

    <string name="defaultMaxResults" translatable="false">1</string>

    <!--
    This is input language that we assume if for some reason we fail to detect
    the user-selected/recognizer-supported input language.
    -->
    <string name="defaultLanguage" translatable="false">et-EE</string>

    <plurals name="numberOfInputs">
        <item quantity="zero">no inputs</item> <!-- zero is ignored in English -->
        <item quantity="one">1 input</item>
        <item quantity="other">%d inputs</item>
    </plurals>
    <plurals name="summaryMaxResults">
        <item quantity="one">Output only the most likely recognition hypothesis</item>
        <item quantity="other">Output at most %d recognition hypotheses</item>
    </plurals>

</resources>